objects/ccrz__E_StorefrontConfigSettings__c.object
<CustomObject>
    <description>Holds the mappings of various configurations settings for a storefront, such as payment types, currencies, languages, countries.</description>
    <fields>
        <fullName>ccrz__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <label>Type</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Value__c</fullName>
        <label>Value</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>CC Storefront Config Setting</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Storefront Config Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Storefront Config Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>